--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                      v-if="emotion" />
 
                 <figcaption class="meme__overlay">
-                    <span class="meme__fact">{{fact.fact}}</span>
+                    <span class="meme__fact" v-html="fact.fact"></span>
                     <a v-bind:href="fact.url"
                        target="_blank"
                        class="meme__source">Get more on this fact from {{fact.source}}</a>
@@ -85,7 +85,7 @@
                      v-if="emotion" />
 
                 <figcaption class="meme__overlay">
-                    <span class="meme__fact">{{fact.fact}}</span>
+                    <span class="meme__fact" v-html="fact.fact"></span>
                     <a v-bind:href="fact.url"
                        target="_blank"
                        class="meme__source">Get more on this fact from {{fact.source}}</a>
@@ -108,6 +108,18 @@
                     </button>
                 </menu>
             </template>
+
+            <menu v-if="emotion" class="menu__share">
+                <a v-bind:href="'https://www.facebook.com/sharer/sharer.php?u=' + location"
+                   target="_blank">
+                    <img src="img/icon-facebook.svg" alt="Facebook">
+                </a>
+
+                <a v-bind:href="'https://twitter.com/intent/tweet?url=' + location"
+                   target="_blank">
+                    <img src="img/icon-twitter.svg" alt="Twitter">
+                </a>
+            </menu>
 
             <menu v-if="emotion">
                 <button v-on:click="again">Try again?</button>
